--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -10,6 +10,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2
+
 
       - name: meow
         uses: ./.github/actions/cat-facts
