--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -13,7 +13,9 @@ jobs:
       
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2
-
+        with:
+          name: main_artifact
+          path: /all/final.zip
 
       - name: meow
         uses: ./.github/actions/cat-facts
