--- a/.github/actions/cat-facts/Dockerfile
+++ b/.github/actions/cat-facts/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:latest
 MAINTAINER 0xecho <0xecho@proto-code.com>
 
 RUN apt-get update
-RUN apt-get install -y git
+RUN apt-get install -y git zip
 RUN apt-get install -y python3 python3-pip
 WORKDIR /all
 RUN git clone --depth 1 https://github.com/0xecho/OneForAll.git ofa
@@ -18,6 +18,7 @@ RUN apt install perl libnet-ssleay-perl openssl libauthen-pam-perl libio-pty-per
 RUN apt install iputils-ping -y
 COPY . .
 RUN chmod +x doer.sh
+
 
 
 ENTRYPOINT ["bash","/all/doer.sh"]
