--- a/.github/actions/cat-facts/Dockerfile
+++ b/.github/actions/cat-facts/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update
 RUN apt-get install -y git zip gist
 RUN apt-get install -y python3 python3-pip
 WORKDIR /all
-RUN git clone --depth 1 https://github.com/0xecho/OneForAll.git ofa
+RUN git clone --depth 1 https://github.com/0xecho/OneForAll.git ofa -b custom
 WORKDIR /all/ofa
 RUN python3 -m pip install -U pip setuptools wheel -i https://mirrors.aliyun.com/pypi/simple/
 RUN pip3 install -r requirements.txt -i https://mirrors.aliyun.com/pypi/simple/
