--- a/.github/actions/cat-facts/Dockerfile
+++ b/.github/actions/cat-facts/Dockerfile
@@ -1,8 +1,8 @@
 FROM ubuntu:18.04
 MAINTAINER 0xecho <0xecho@proto-code.com>
-RUN export DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get update
-RUN apt-get install -y git zip gist build-essential xorg libssl-dev libxrender-dev wget python3 python3-pip tar
+RUN bash -c "DEBIAN_FRONTEND=noninteractive apt-get install -y git zip gist build-essential xorg libssl-dev libxrender-dev wget python3 python3-pip tar"
 RUN apt-get update && apt-get install -y --no-install-recommends xvfb libfontconfig libjpeg-turbo8 xfonts-75dpi fontconfig
 WORKDIR /all
 RUN wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.3/wkhtmltox-0.12.3_linux-generic-amd64.tar.xz
