--- a/.github/actions/cat-facts/Dockerfile
+++ b/.github/actions/cat-facts/Dockerfile
@@ -42,5 +42,8 @@ RUN go get -u -v github.com/projectdiscovery/httpx/cmd/httpx
 RUN go get github.com/Emoe/kxss
 RUN go get -u github.com/jaeles-project/gospider
 
+RUN git clone https://github.com/0xecho/Arjun /all/Arjun
+RUN pip3 install /all/Arjun/requirements.txt
+
 RUN chmod +x doer.sh
 ENTRYPOINT ["bash","/all/doer.sh"]
