--- a/.github/actions/cat-facts/Dockerfile
+++ b/.github/actions/cat-facts/Dockerfile
@@ -40,13 +40,14 @@ RUN apt install iputils-ping -y
 RUN go get -u -v github.com/lc/gau
 RUN go get -u -v github.com/projectdiscovery/httpx/cmd/httpx
 RUN go get github.com/Emoe/kxss
+RUN go get https://github.com/hahwul/dalfox
 RUN go get -u github.com/jaeles-project/gospider
 
 RUN git clone https://github.com/0xecho/Arjun /all/Arjun
 RUN pip3 install requests
 
 RUN git clone https://github.com/maurosoria/dirsearch.git /all/dirsearch
-
+RUN git clone https://github.com/devanshbatham/ParamSpider /all/ps
 
 RUN chmod +x doer.sh
 ENTRYPOINT ["bash","/all/doer.sh"]
