--- a/.github/actions/cat-facts/Dockerfile
+++ b/.github/actions/cat-facts/Dockerfile
@@ -47,7 +47,7 @@ RUN git clone https://github.com/0xecho/Arjun /all/Arjun
 RUN pip3 install requests
 
 RUN git clone https://github.com/maurosoria/dirsearch.git /all/dirsearch
-RUN git clone https://github.com/devanshbatham/ParamSpider /all/ps
+RUN git clone https://github.com/0xecho/ParamSpider /all/ps
 
 RUN chmod +x doer.sh
 ENTRYPOINT ["bash","/all/doer.sh"]
